tests/tooling/fixtures/native/recovery/negative/negative_return_bool_nullability_suffix.objc3
// Negative fixture: non-id return nullability suffix is unsupported.
// Expected diagnostic code(s): O3S206.
module NegativeReturnBoolNullabilitySuffix;

fn pick(flag: bool) -> bool? {
  return flag;
}

fn main() -> i32 {
  if (pick(true)) {
    return 1;
  }
  return 0;
}
